--- a/robophery/map.jinja
+++ b/robophery/map.jinja
@@ -22,15 +22,14 @@ Debian:
     - build-essential
     gpio:
     - python-smbus
-    - Adafruit_I2C
-    - Adafruit_Python_DHT
-    - w1thermsensor
+    - python-ftdi
     ble:
     - bluez
     - libbluetooth-dev
   pip:
     gpio:
-    - Adafruit-GPIO==1.0.1
+    - w1thermsensor
+    - Adafruit_Python_DHT
     ble:
     - gattlib==0.20150805
     - PyBluez==0.22
