--- a/robophery/map.jinja
+++ b/robophery/map.jinja
@@ -35,6 +35,7 @@ Debian:
     ble:
     - gattlib==0.20150805
     - PyBluez==0.22
+  service: robophery-manager
   dir:
     base: /srv/robophery
 {%- endload %}
