Fix python-ftdi pkg name

--- a/robophery/map.jinja
+++ b/robophery/map.jinja
@@ -18,7 +18,7 @@ default:
     - build-essential
     gpio:
     - libi2c-dev
-    - python-ftdi
+    - python-ftdi1
     - python-smbus
     ble:
     - bluez
