Better packages for GPIO/I2C

--- a/robophery/map.jinja
+++ b/robophery/map.jinja
@@ -13,11 +13,12 @@ default:
   pkgs:
     default:
     - python-dev
-    - python-virtualenv
+    - virtualenv
     - python-pip
     - build-essential
     gpio:
     - libi2c-dev
+    - i2c-tools
     - python-ftdi1
     - python-smbus
     ble:
